# doc-share

./: .env.example  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_documents.py  0002_create_audit_events.py
app/: audit.py  audit_verify.py  config.py  main.py  models.py  schemas.py  storage.py
app/routers/: audit.py  documents.py
frontend/: audit.html  documents.html  upload.html
frontend/css/: styles.css
frontend/js/: audit.js  documents.js  upload.js
